Removed the water mark and fixed smooth scrolling

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4PZ6KGmK-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="0" data-target="#lb-sn4PZ6KGmK">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn4SjUxMZL-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="0" data-target="#lb-sn4SjUxMZL">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -187,8 +187,8 @@
                     Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4PZ6KGmK-modal">
-                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="1" data-target="#lb-sn4PZ6KGmK">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn4SjUxMZL-modal">
+                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="1" data-target="#lb-sn4SjUxMZL">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -197,8 +197,8 @@
                     Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4PZ6KGmK-modal">
-                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="2" data-target="#lb-sn4PZ6KGmK">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn4SjUxMZL-modal">
+                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="2" data-target="#lb-sn4SjUxMZL">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -206,8 +206,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4PZ6KGmK-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="3" data-target="#lb-sn4PZ6KGmK">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn4SjUxMZL-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="3" data-target="#lb-sn4SjUxMZL">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -216,8 +216,8 @@
                     Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4PZ6KGmK-modal">
-                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="4" data-target="#lb-sn4PZ6KGmK">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn4SjUxMZL-modal">
+                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="4" data-target="#lb-sn4SjUxMZL">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -225,8 +225,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4PZ6KGmK-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="5" data-target="#lb-sn4PZ6KGmK">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn4SjUxMZL-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="5" data-target="#lb-sn4SjUxMZL">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -234,8 +234,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4PZ6KGmK-modal">
-                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="6" data-target="#lb-sn4PZ6KGmK">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn4SjUxMZL-modal">
+                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="6" data-target="#lb-sn4SjUxMZL">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -243,8 +243,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4PZ6KGmK-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="7" data-target="#lb-sn4PZ6KGmK">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn4SjUxMZL-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="7" data-target="#lb-sn4SjUxMZL">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -254,11 +254,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sn4PZ6KGmK-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sn4SjUxMZL-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide carousel-fade" id="lb-sn4PZ6KGmK" data-ride="carousel" data-interval="6000">
+                        <div class="carousel slide carousel-fade" id="lb-sn4SjUxMZL" data-ride="carousel" data-interval="6000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/plant-nation-420x300.jpg" alt="">
@@ -282,18 +282,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#lb-sn4PZ6KGmK"></li>
-                                <li data-slide-to="1" data-target="#lb-sn4PZ6KGmK"></li>
-                                <li data-slide-to="2" data-target="#lb-sn4PZ6KGmK"></li>
-                                <li data-slide-to="3" data-target="#lb-sn4PZ6KGmK"></li><li data-slide-to="4" data-target="#lb-sn4PZ6KGmK"></li><li data-slide-to="5" data-target="#lb-sn4PZ6KGmK"></li><li data-slide-to="6" data-target="#lb-sn4PZ6KGmK"></li><li data-slide-to="7" data-target="#lb-sn4PZ6KGmK"></li>
+                                <li data-slide-to="0" class="active" data-target="#lb-sn4SjUxMZL"></li>
+                                <li data-slide-to="1" data-target="#lb-sn4SjUxMZL"></li>
+                                <li data-slide-to="2" data-target="#lb-sn4SjUxMZL"></li>
+                                <li data-slide-to="3" data-target="#lb-sn4SjUxMZL"></li><li data-slide-to="4" data-target="#lb-sn4SjUxMZL"></li><li data-slide-to="5" data-target="#lb-sn4SjUxMZL"></li><li data-slide-to="6" data-target="#lb-sn4SjUxMZL"></li><li data-slide-to="7" data-target="#lb-sn4SjUxMZL"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-sn4PZ6KGmK">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-sn4SjUxMZL">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-sn4PZ6KGmK">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-sn4SjUxMZL">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -389,6 +389,9 @@
         </div>
     </div>
 </section>
+
+<script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+  
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
