--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-12 col-lg-10">
+            <div class="col-12 col-lg-8">
                 <div class="image-wrapper">
                     <img src="assets/images/plants-nation-logo-1000x1000.jpeg" alt="Mobirise">
                     
@@ -97,7 +97,7 @@
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style display-2">About <strong>Us</strong></h6>
-                        <p class="mbr-text mbr-fonts-style mb-4 display-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br></p>
+                        <p class="mbr-text mbr-fonts-style mb-4 display-7">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br></p>
                         
                     </div>
                 </div>
@@ -177,8 +177,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4W5qEGyC-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="0" data-target="#lb-sn4W5qEGyC">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn7Ib8wJtV-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="0" data-target="#lb-sn7Ib8wJtV">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -187,8 +187,8 @@
                     Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4W5qEGyC-modal">
-                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="1" data-target="#lb-sn4W5qEGyC">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn7Ib8wJtV-modal">
+                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="1" data-target="#lb-sn7Ib8wJtV">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -197,8 +197,8 @@
                     Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4W5qEGyC-modal">
-                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="2" data-target="#lb-sn4W5qEGyC">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn7Ib8wJtV-modal">
+                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="2" data-target="#lb-sn7Ib8wJtV">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -206,8 +206,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4W5qEGyC-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="3" data-target="#lb-sn4W5qEGyC">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn7Ib8wJtV-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="3" data-target="#lb-sn7Ib8wJtV">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -216,8 +216,8 @@
                     Image Caption</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4W5qEGyC-modal">
-                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="4" data-target="#lb-sn4W5qEGyC">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn7Ib8wJtV-modal">
+                    <img class="w-100" src="assets/images/img-20210124-wa0030-980x735.jpeg" alt="" data-slide-to="4" data-target="#lb-sn7Ib8wJtV">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -225,8 +225,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4W5qEGyC-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="5" data-target="#lb-sn4W5qEGyC">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn7Ib8wJtV-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="5" data-target="#lb-sn7Ib8wJtV">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -234,8 +234,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4W5qEGyC-modal">
-                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="6" data-target="#lb-sn4W5qEGyC">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn7Ib8wJtV-modal">
+                    <img class="w-100" src="assets/images/test-leaft-420x300.jpg" alt="" data-slide-to="6" data-target="#lb-sn7Ib8wJtV">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -243,8 +243,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7">
                     Image Caption</h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sn4W5qEGyC-modal">
-                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="7" data-target="#lb-sn4W5qEGyC">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sn7Ib8wJtV-modal">
+                    <img class="w-100" src="assets/images/plant-nation-420x300.jpg" alt="" data-slide-to="7" data-target="#lb-sn7Ib8wJtV">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -254,11 +254,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sn4W5qEGyC-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sn7Ib8wJtV-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide carousel-fade" id="lb-sn4W5qEGyC" data-ride="carousel" data-interval="6000">
+                        <div class="carousel slide carousel-fade" id="lb-sn7Ib8wJtV" data-ride="carousel" data-interval="6000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/plant-nation-420x300.jpg" alt="">
@@ -282,18 +282,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#lb-sn4W5qEGyC"></li>
-                                <li data-slide-to="1" data-target="#lb-sn4W5qEGyC"></li>
-                                <li data-slide-to="2" data-target="#lb-sn4W5qEGyC"></li>
-                                <li data-slide-to="3" data-target="#lb-sn4W5qEGyC"></li><li data-slide-to="4" data-target="#lb-sn4W5qEGyC"></li><li data-slide-to="5" data-target="#lb-sn4W5qEGyC"></li><li data-slide-to="6" data-target="#lb-sn4W5qEGyC"></li><li data-slide-to="7" data-target="#lb-sn4W5qEGyC"></li>
+                                <li data-slide-to="0" class="active" data-target="#lb-sn7Ib8wJtV"></li>
+                                <li data-slide-to="1" data-target="#lb-sn7Ib8wJtV"></li>
+                                <li data-slide-to="2" data-target="#lb-sn7Ib8wJtV"></li>
+                                <li data-slide-to="3" data-target="#lb-sn7Ib8wJtV"></li><li data-slide-to="4" data-target="#lb-sn7Ib8wJtV"></li><li data-slide-to="5" data-target="#lb-sn7Ib8wJtV"></li><li data-slide-to="6" data-target="#lb-sn7Ib8wJtV"></li><li data-slide-to="7" data-target="#lb-sn7Ib8wJtV"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-sn4W5qEGyC">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-sn7Ib8wJtV">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-sn4W5qEGyC">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-sn7Ib8wJtV">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -341,7 +341,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Pune" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Pune" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
@@ -388,7 +388,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Plants Nation, Made with Love <a href="https://mobirise.site/u" style="color:#aaa;"></a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/l" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise website creator - <a href="https://mobirise.site/n" style="color:#aaa;">Click here</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
