--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
     <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
 
-
+    <meta name="google-site-verification" content="qDoW2Z2hpzApXLyOUn1YijSOmoI2nbz9X0bkTnIzhxM" />
 
 
 </head>
